cambie los puertos

--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -15,10 +15,10 @@ COPY docker/entrypoint.sh /
 COPY docker/supervisor/rest.conf /etc/supervisor/conf.d
 COPY scripts /scripts
 COPY src /src
-RUN cd /src && pip3 install --trusted-host pypi.econo.unlp.edu.ar --upgrade -e .
+RUN cd /src && pip3 install -U --upgrade-strategy=eager --trusted-host pypi.econo.unlp.edu.ar --upgrade -e .
 
 WORKDIR /src
 
-EXPOSE 5000
+EXPOSE 10002
 
 ENTRYPOINT ["/entrypoint.sh"]
