--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "${workspaceFolder}/env/bin/python",
+    "python.pythonPath": "env/bin/python",
     "python.autoComplete.extraPaths": ["/src/github/microservices_common/src"],
     "python.venvPath": "${workspaceFolder}/env"
 }
