faltaba el supervisor

--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -1,7 +1,11 @@
 FROM login-api-base
 
+COPY docker/entrypoint.sh /
+COPY docker/supervisor/rest.conf /etc/supervisor/conf.d
+
 COPY scripts /scripts
 COPY src /src
+
 
 WORKDIR /src
 
