corregimos la instalacion de la api final en el docker generado para que funcione ya que python nuevo no soporta los archivos link

--- a/docker/dockerfile
+++ b/docker/dockerfile
@@ -5,6 +5,7 @@ COPY docker/supervisor/rest.conf /etc/supervisor/conf.d
 
 COPY scripts /scripts
 COPY src /src
+RUN cd /src && pip3 install .
 
 
 WORKDIR /src
